# niri-wselector

./: README.md  niri-window-fuzzel.py  pyproject.toml
niri_wselector/: __main__.py
